# ESP32Node

main/: CMakeLists.txt  app_main.c
main/inc/: twai_connect.h
main/src/: socket_tasks.c  twai_connect.c  wifi.c  ws_server.c
