idf_component_register(SRCS "app_main.c" 
                            "src/ws_server.c"
                            "src/twai_connect.c" 
                            "src/runStats.c" 
                            "src/i2c_dev.c" 
                            "src/ina_219.c" 
                            "src/ina_219_handler.c"
                            "src/tcp_server.c"
                            "src/socket_tasks.c"
                            "src/json_utils.c"
                            "src/wifi.c"
                    INCLUDE_DIRS "." 
                                "inc"
                    EMBED_FILES "webpage/control.html")
